fixed contrast shittt ok im out

--- a/src/sass/pages/_volunteer.scss
+++ b/src/sass/pages/_volunteer.scss
@@ -1,4 +1,11 @@
 .volunteer {
+    a {
+        color: $blue-grey;
+        transition: color 250ms;
+        &:hover {
+            color: darken($blue-grey, 10%);
+        }
+    }
     .results-wrapper {
         ul.org-list {
             li {
